welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: not found: value setColorBrosse
  setColorBrosse(c:Color)
  ^PatternPicture:10: error: value Red is not a member of object java.awt.Color
  fairec(Color.Red) ; avance() ; fairec(Color.Blue) ; avance() ; fairec(Color.green) ; avance() ; fairec(Color.Yellow)
               ^PatternPicture:10: error: value Blue is not a member of object java.awt.Color
  fairec(Color.Red) ; avance() ; fairec(Color.Blue) ; avance() ; fairec(Color.green) ; avance() ; fairec(Color.Yellow)
                                              ^PatternPicture:10: error: value Yellow is not a member of object java.awt.Color
  fairec(Color.Red) ; avance() ; fairec(Color.Blue) ; avance() ; fairec(Color.green) ; avance() ; fairec(Color.Yellow)
                                                                                                               ^