welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def Brosse() {
  baisseBrosse() ; leveBrosse()
}
def fairec(c:Color) {
  setColorBrosse(c:Color)
  avance() ; Brosse() ; gauche() ; avance() ; gauche() ; avance();Brosse() ; gauche() ; avance() ; gauche()
  
}
def faireMotif() {
  fairec(Color.Red) ; avance() ; fairec(Color.Blue) ; avance() ; fairec(Color.green) ; avance() ; fairec(Color.Yellow)
}




















override def run() {
  faireMotif()
}